--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.8;
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 30px;
             background-color: var(--background-color);
@@ -100,282 +100,7 @@
             color: var(--secondary-color);
         }
 
-        .birthdays {
-            background-color: white;
-            padding: 30px;
-            margin: 25px 0;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .birthdays-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .birthday-month {
-            background-color: #f8fafc;
-            padding: 20px;
-            border-radius: 10px;
-            border-left: 4px solid var(--secondary-color);
-        }
-
-        .birthday-month h4 {
-            color: var(--primary-color);
-            margin: 0 0 15px 0;
-            font-size: 1.2em;
-            border-bottom: 2px solid var(--accent-color);
-            padding-bottom: 8px;
-        }
-
-        .birthday-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 8px 0;
-            border-bottom: 1px solid #e2e8f0;
-        }
-
-        .birthday-item:last-child {
-            border-bottom: none;
-        }
-
-        .birthday-name {
-            font-weight: 500;
-        }
-
-        .birthday-date {
-            color: var(--secondary-color);
-            font-weight: 600;
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 15px;
-            }
-
-            h1 {
-                font-size: 2em;
-            }
-
-            h2 {
-                font-size: 1.5em;
-            }
-
-            .prayer, .mystery-group, .birthdays {
-                padding: 20px;
-            }
-
-            .birthdays-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
-</head>
-<body>
-    <h1>Comunidad Santa Teresa de Calcuta</h1>
-
-    <div class="prayer">
-        <h2>Invocación al Espíritu Santo</h2>
-        <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de tu amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra. Oh Dios, que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amén</p>
-    </div>
-
-    <!-- [Previous prayers sections remain the same] -->
-
- /* Añadir estos estilos en la sección de CSS */
-    .catholic-date {
-        background-color: #e8f4ff;
-        border-left: 4px solid #2563eb;
-        margin: 8px 0;
-        padding: 8px;
-        border-radius: 8px;
-    }
-
-    .catholic-date .event-name {
-        color: #1e40af;
-        font-weight: 600;
-    }
-
-    .catholic-date .event-date {
-        color: #3b82f6;
-        font-weight: 500;
-    }
-
-    /* Actualización de la sección de fechas */
- <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fechas Importantes - Comunidad Santa Teresa de Calcuta</title>
-    <style>
-        :root {
-            --primary-color: #1e3a8a;
-            --secondary-color: #3b82f6;
-            --accent-color: #60a5fa;
-            --background-color: #f0f9ff;
-            --text-color: #1e293b;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.8;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 30px;
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        h1 {
-            color: var(--primary-color);
-            text-align: center;
-            margin: 40px 0;
-            font-size: 2.5em;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            border-bottom: 3px solid var(--accent-color);
-            padding-bottom: 15px;
-        }
-
-        .dates-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
-            margin-top: 30px;
-        }
-
-        .month-card {
-            background-color: white;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .month-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .month-card h3 {
-            color: var(--primary-color);
-            margin: 0 0 20px 0;
-            padding-bottom: 10px;
-            border-bottom: 2px solid var(--accent-color);
-            font-size: 1.3em;
-        }
-
-        .date-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 12px 0;
-            border-bottom: 1px solid #e2e8f0;
-        }
-
-        .date-item:last-child {
-            border-bottom: none;
-        }
-
-        .event-name {
-            font-weight: 600;
-            color: var(--text-color);
-        }
-
-        .event-date {
-            color: var(--secondary-color);
-            font-weight: 600;
-            min-width: 100px;
-            text-align: right;
-        }
-
-        /* Estilo específico para fechas católicas */
-        .catholic-date {
-            background-color: #e8f4ff;
-            border-radius: 8px;
-            margin: 8px 0;
-        }
-
-        .catholic-date .event-name {
-            color: #1e40af;
-        }
-
-        .catholic-date .event-date {
-            color: #3b82f6;
-        }
-
-        .footer {
-            text-align: center;
-            margin-top: 60px;
-            padding: 30px;
-            background-color: white;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .footer .credit {
-            color: var(--primary-color);
-            margin: 5px 0;
-        }
-
-        .footer .copyright {
-            color: var(--secondary-color);
-            font-size: 0.9em;
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 15px;
-            }
-
-            h1 {
-                font-size: 2em;
-            }
-
-            .dates-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
-</head>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fechas Importantes - Comunidad Santa Teresa de Calcuta</title>
-    <style>
-        :root {
-            --primary-color: #1e3a8a;
-            --secondary-color: #3b82f6;
-            --accent-color: #60a5fa;
-            --background-color: #f0f9ff;
-            --text-color: #1e293b;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.8;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 30px;
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        h1 {
-            color: var(--primary-color);
-            text-align: center;
-            margin: 40px 0;
-            font-size: 2.5em;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            border-bottom: 3px solid var(--accent-color);
-            padding-bottom: 15px;
-        }
-
+        /* Estilos para la sección de fechas */
         .dates-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -475,6 +200,14 @@
                 font-size: 2em;
             }
 
+            h2 {
+                font-size: 1.5em;
+            }
+
+            .prayer, .mystery-group {
+                padding: 20px;
+            }
+
             .dates-grid {
                 grid-template-columns: 1fr;
             }
@@ -482,9 +215,20 @@
     </style>
 </head>
 <body>
-    <h1>Fechas Importantes 2025</h1>
+    <h1>Comunidad Santa Teresa de Calcuta</h1>
 
+    <!-- Oraciones -->
+    <div class="prayer">
+        <h2>Invocación al Espíritu Santo</h2>
+        <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de tu amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra. Oh Dios, que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amén</p>
+    </div>
+
+    <!-- ... [Resto de las oraciones] ... -->
+
+    <!-- Sección de Fechas -->
+    <h2>Fechas Importantes 2025</h2>
     <div class="dates-grid">
+        <!-- Enero -->
         <div class="month-card">
             <h3>Enero</h3>
             <div class="date-item catholic-date">
@@ -501,6 +245,7 @@
             </div>
         </div>
 
+        <!-- Febrero -->
         <div class="month-card">
             <h3>Febrero</h3>
             <div class="date-item">
@@ -509,6 +254,7 @@
             </div>
         </div>
 
+        <!-- Marzo -->
         <div class="month-card">
             <h3>Marzo</h3>
             <div class="date-item catholic-date">
@@ -525,6 +271,7 @@
             </div>
         </div>
 
+        <!-- Abril -->
         <div class="month-card">
             <h3>Abril</h3>
             <div class="date-item catholic-date">
@@ -537,6 +284,7 @@
             </div>
         </div>
 
+        <!-- Mayo -->
         <div class="month-card">
             <h3>Mayo</h3>
             <div class="date-item">
@@ -545,6 +293,7 @@
             </div>
         </div>
 
+        <!-- Junio -->
         <div class="month-card">
             <h3>Junio</h3>
             <div class="date-item catholic-date">
@@ -561,6 +310,7 @@
             </div>
         </div>
 
+        <!-- Julio -->
         <div class="month-card">
             <h3>Julio</h3>
             <div class="date-item">
@@ -569,6 +319,7 @@
             </div>
         </div>
 
+        <!-- Agosto -->
         <div class="month-card">
             <h3>Agosto</h3>
             <div class="date-item">
@@ -593,6 +344,7 @@
             </div>
         </div>
 
+        <!-- Septiembre -->
         <div class="month-card">
             <h3>Septiembre</h3>
             <div class="date-item">
@@ -609,6 +361,7 @@
             </div>
         </div>
 
+        <!-- Noviembre -->
         <div class="month-card">
             <h3>Noviembre</h3>
             <div class="date-item catholic-date">
@@ -625,6 +378,7 @@
             </div>
         </div>
 
+        <!-- Diciembre -->
         <div class="month-card">
             <h3>Diciembre</h3>
             <div class="date-item">
@@ -646,16 +400,9 @@
         </div>
     </div>
 
-    <div class="footer">
-        <p class="credit">Design and Development: Mario Arbelaez</p>
+  <div class="footer">
+        <p class="credit">Design and Development: Carmenza Fajardo / Mario Arbelaez</p>
         <p class="copyright">© 2025 All rights reserved</p>
     </div>
-</body>
-</html>
-</html>
-<div class="footer">
-    <p class="credit">Design and Development: Carmenza Fajardo / Mario Arbelaez</p>
-    <p class="copyright">© 2025 All rights reserved</p>
-</div>
 </body>
 </html>
