--- a/index.html
+++ b/index.html
@@ -218,24 +218,29 @@
 
     <div class="prayer">
         <h2>Invocación al Espíritu Santo</h2>
-        <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de tu amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra. Oh Dios, que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amén</p>
+        <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de amor. Envía Señor tu Espíritu para darnos nueva vida y se renovara la faz de la Tierra. Oh Dios que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu, y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amen</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Peticiones Especiales Antes del Rosario</h2>
+        <p>Aquí expresamos todos nuestros agradecimientos y peticiones.</p>
     </div>
 
     <div class="prayer">
         <h2>Credo</h2>
-        <p>Creo en Dios Padre todopoderoso, creador del cielo y de la tierra. Creo en Jesucristo, su único Hijo, nuestro Señor, que fue concebido por obra y gracia del Espíritu Santo, nació de Santa María Virgen, padeció bajo el poder de Poncio Pilato, fue crucificado, muerto y sepultado, descendió a los infiernos, al tercer día resucitó de entre los muertos, subió a los cielos y está sentado a la derecha de Dios Padre todopoderoso. Desde allí ha de venir a juzgar a vivos y muertos. Creo en el Espíritu Santo, la Santa Iglesia Católica, la comunión de los santos, el perdón de los pecados, la resurrección de la carne y la vida eterna Amén.</p>
+        <p>Creo en Dios Padre todopoderoso, creador del cielo y de la tierra. Creo en Jesucristo, su único Hijo, nuestro Señor, que fue concebido por obra y gracia del Espíritu Santo, nació de Santa Maria Virgen, padeció bajo el poder de Poncio Pilato, fue crucificado, muerto y sepultado, descendió a los infiernos, al tercer día resucito de entre los muertos, subió a los cielos y esta sentado a la derecha de Dios Padre todopoderoso. Desde allí ha de venir a juzgar a vivos y muertos. Creo en el Espíritu Santo, la Santa Iglesia Católica, la comunión de los santos, el perdón de los pecados, la resurrección de la carne y la vida eterna Amen.</p>
     </div>
 
     <h2>Rosario a la Virgen María</h2>
     <div class="mysteries">
         <div class="mystery-group">
-            <h3>Lunes y Sábados - Misterios Gozosos</h3>
+            <h3>Lunes y Sabados - Misterios Gozosos</h3>
             <ul>
                 <li>La anunciación</li>
-                <li>La Visita de María a Santa Isabel</li>
-                <li>El nacimiento de Jesús</li>
-                <li>La presentación de Jesús en el templo</li>
-                <li>El Niño Jesús es hallado</li>
+                <li>La Visita de Maria y Santa Isabel</li>
+                <li>El nacimiento de Jesus</li>
+                <li>La presentación de Jesus en el templo</li>
+                <li>El Niño Jesus es hallado</li>
             </ul>
         </div>
 
@@ -243,55 +248,90 @@
             <h3>Martes y Viernes - Misterios Dolorosos</h3>
             <ul>
                 <li>La oración en el huerto</li>
-                <li>La flagelación de Jesús</li>
+                <li>La flagelación de Jesus</li>
                 <li>La coronación de espinas</li>
-                <li>Jesús camino al calvario</li>
-                <li>Jesús muere en la cruz</li>
+                <li>Jesus camino al calvario</li>
+                <li>Jesus muere en la cruz</li>
             </ul>
         </div>
 
         <div class="mystery-group">
             <h3>Miércoles y Domingos - Misterios Gloriosos</h3>
             <ul>
-                <li>La resurrección de Jesús</li>
-                <li>La ascensión de Jesús</li>
-                <li>La venida del Espíritu Santo</li>
-                <li>La asunción de María</li>
-                <li>La coronación de María</li>
+                <li>La resurrecion de Jesus</li>
+                <li>La ascensión de Jesus</li>
+                <li>La venida del Espiritu Santo</li>
+                <li>La asuncion de Maria</li>
+                <li>La coronación de Maria</li>
             </ul>
         </div>
 
         <div class="mystery-group">
             <h3>Jueves - Misterios Luminosos</h3>
             <ul>
-                <li>El Bautismo de Jesús</li>
-                <li>Las bodas de Caná</li>
+                <li>El Bautismos de Jesus</li>
+                <li>Las bodas de Cana</li>
                 <li>El anuncio del Reino de Dios</li>
-                <li>La Transfiguración de Jesús</li>
-                <li>La Institución de la Eucaristía</li>
+                <li>La Transfiguracion de Jesus</li>
+                <li>La Institucion de la Eucaristia</li>
             </ul>
         </div>
     </div>
 
     <div class="prayer">
         <h2>Salve</h2>
-        <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los desterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lágrimas. Ea pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muéstranos a Jesús, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen María. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amén.</p>
+        <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los deterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lagrimas. E a pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muestranos a Jesus, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen Maria. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amen.</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
+        <p>(Content for this section will need to be manually added as it is specific and likely changes frequently)</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Oracion para cerrar la Lectio Divina</h2>
+        <p>(Content for this section will need to be manually added as it is specific and likely changes frequently)</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Peticiones y Acciones de Gracias al Señor</h2>
+        <p>(Content for this section will need to be manually added as it is specific and likely changes frequently)</p>
     </div>
 
     <div class="prayer">
         <h2>Padre Nuestro</h2>
-        <p>Padre nuestro que estás en el cielo, santificado sea tu nombre, venga a nosotros tu reino, hágase tu voluntad en la tierra como en el cielo. Danos hoy nuestro pan de cada día, perdona nuestras ofensas, como también nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación y líbranos del mal, amén.</p>
+        <p>Padre nuestro que estas en el cielo, santificado sea tu nombre, venga a nosotros tu reino, hagase tu voluntad en la tierra como en el cielo. Danos hoy nuestro pan de cada dia, perdona nuestras ofensas, como tambien nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación libranos del mal, amen.</p>
     </div>
 
     <div class="prayer">
-        <h2>Oración a San Miguel Arcángel</h2>
-        <p>San Miguel Arcángel, defiéndenos en la pelea, sé nuestro amparo contra la maldad y acechanzas del demonio, reprímele Tú Dios te pedimos suplicantes y Tú príncipe de la milicia celestial, armado del poder divino, arroja con ese inmenso poder, a satanás y a todos los espíritus malignos que andan por el mundo para la perdición de las almas, Amén.</p>
+        <h2>Oracion a Maria</h2>
+        <p>Bajo tu amparo nos acogemos Santa Madre de Dios, no desprecies las suplicas que te dirigimos en nuestras necesidades, antes bien, libranos de todo mal y peligro o Virgen Gloriosa y Bendita, Amen.</p>
     </div>
 
     <div class="prayer">
-        <h2>Oración a San Francisco de Asís</h2>
-        <p>Señor, haz de nosotros instrumentos de tu paz<br>
-        Donde haya odio, sembremos amor<br>
+        <h2>Sagrado Corazon de Jesus</h2>
+        <p>En vos confio</p>
+    </div>
+
+    <div class="prayer">
+        <h2>San Jose Varon Prudente y Justo</h2>
+        <p>Ruega por nosotros</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Santa Teresa de Calcuta</h2>
+        <p>Ruega por nosotros</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Oracion a San Miguel Arcangel</h2>
+        <p>San Miguel Arcangel, defiéndenos en la pelea, se nuestro amparo contra la maldad y acechanzas del demonio, reprímele Tu Dios te pedimos suplicantes y Tu príncipe de la milicia celestial, armado del poder divino, arroja con ese inmenso poder, a satanas y a todos los espíritus malignos que andan por el mundo para la perdición de las almas, Amen.</p>
+    </div>
+
+    <div class="prayer">
+        <h2>Oracion a San Francisco de Asis</h2>
+        <p>Señor, has de nosotros instrumentos de tu paz<br>
+        Donde haya odio, siembremos amor<br>
         Donde haya injuria, perdón<br>
         Donde haya duda fe<br>
         Donde haya desesperación, esperanza<br>
@@ -304,16 +344,14 @@
         Que no busquemos ser amados<br>
         Sino amar<br><br>
         Por que dando es como recibimos<br>
-        Perdonando es como Tú nos perdonas<br>
-        Y muriendo en Ti nacemos para la vida eterna. Amén.</p>
+        Perdonando es como Tu nos perdonas<br>
+        Y muriendo en Ti nacemos para la vida eterna. Amen.</p>
     </div>
 
     <div class="prayer">
-        <h2>Oración Final a la Virgen María</h2>
-        <p>Dulce Madre no te alejes, tu vista de nosotros no apartes, ven con nosotros a todas partes y solos nunca nos dejes, y ya que nos quieres tanto como verdadera Madre, haz que en esta noche, nos bendiga, EL PADRE, EL HIJO Y EL ESPÍRITU SANTO AMÉN.</p>
+        <h2>Oracion Final a la Virgen Maria</h2>
+        <p>Dulce Madre no te alejes, tu vista de nosotros no apartes, ven con nosotros a todas partes y solos nunca nos dejes, y ya que nos quieres tanto como verdadera Madre, haz que en esta noche, nos bendiga, EL PADRE, EL HIJO Y EL ESPIRITU SANTO AMEN.</p>
     </div>
-
-    <!-- ... [Resto de las oraciones] ... -->
 
     <!-- Sección de Fechas -->
     <h2>Fechas Importantes 2025</h2>
@@ -321,13 +359,13 @@
         <!-- Enero -->
         <div class="month-card">
             <h3>Enero</h3>
-            <div class="date-item catholic-date">
-                <span class="event-name">Santa María, Madre de Dios</span>
-                <span class="event-date">1 Enero</span>
-            </div>
             <div class="date-item">
                 <span class="birthday-name">SANDRA CACERES</span>
                 <span class="birthday-date">4 Enero</span>
+            </div>
+            <div class="date-item catholic-date">
+                <span class="event-name">Santa María, Madre de Dios</span>
+                <span class="event-date">1 Enero</span>
             </div>
             <div class="date-item catholic-date">
                 <span class="event-name">Epifanía del Señor</span>
@@ -355,7 +393,7 @@
                 <span class="event-name">San José</span>
                 <span class="event-date">19 Marzo</span>
             </div>
-            <div class="date-item">
+             <div class="date-item">
                 <span class="birthday-name">SOCORRO CARTER (SOKY)</span>
                 <span class="birthday-date">20 Marzo</span>
             </div>
@@ -377,7 +415,7 @@
         <!-- Mayo -->
         <div class="month-card">
             <h3>Mayo</h3>
-            <div class="date-item">
+           <div class="date-item">
                 <span class="birthday-name">MONSEÑOR RICARDO TOBON</span>
                 <span class="birthday-date">8 Mayo</span>
             </div>
@@ -386,13 +424,13 @@
         <!-- Junio -->
         <div class="month-card">
             <h3>Junio</h3>
+             <div class="date-item">
+                <span class="birthday-name">MILDRED MENDEZ</span>
+                <span class="birthday-date">16 Junio</span>
+            </div>
             <div class="date-item catholic-date">
                 <span class="event-name">Domingo de Pentecostés</span>
                 <span class="event-date">15 Junio</span>
-            </div>
-            <div class="date-item">
-                <span class="birthday-name">MILDRED MENDEZ</span>
-                <span class="birthday-date">16 Junio</span>
             </div>
             <div class="date-item catholic-date">
                 <span class="event-name">Corpus Christi</span>
@@ -403,7 +441,7 @@
         <!-- Julio -->
         <div class="month-card">
             <h3>Julio</h3>
-            <div class="date-item">
+           <div class="date-item">
                 <span class="birthday-name">BEATRIZ MARTINEZ</span>
                 <span class="birthday-date">28 Julio</span>
             </div>
@@ -412,7 +450,7 @@
         <!-- Agosto -->
         <div class="month-card">
             <h3>Agosto</h3>
-            <div class="date-item">
+           <div class="date-item">
                 <span class="birthday-name">GLADYS GIL</span>
                 <span class="birthday-date">5 Agosto</span>
             </div>
@@ -437,7 +475,7 @@
         <!-- Septiembre -->
         <div class="month-card">
             <h3>Septiembre</h3>
-            <div class="date-item">
+             <div class="date-item">
                 <span class="birthday-name">GERMAN OCAMPO</span>
                 <span class="birthday-date">19 Septiembre</span>
             </div>
@@ -458,7 +496,7 @@
                 <span class="event-name">Día de Todos los Santos</span>
                 <span class="event-date">1 Noviembre</span>
             </div>
-            <div class="date-item">
+             <div class="date-item">
                 <span class="birthday-name">JOE MARTINEZ</span>
                 <span class="birthday-date">19 Noviembre</span>
             </div>
@@ -479,7 +517,7 @@
                 <span class="event-name">Inmaculada Concepción</span>
                 <span class="event-date">8 Diciembre</span>
             </div>
-            <div class="date-item">
+           <div class="date-item">
                 <span class="birthday-name">PILAR JARAMILLO</span>
                 <span class="birthday-date">8 Diciembre</span>
             </div>
