--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@
         <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los deterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lagrimas. E a pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muestranos a Jesus, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen Maria. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amen.</p>
     </div>
 
-    <div class="prayer">
+    <div class = "prayer">
         <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
-        <p>(Content for this section will need to be manually added as it is specific and likely changes frequently)</p>
+        <p>[Paste content for Evangelio del Siguiente Domingo y Lectio Divina here]</p>
     </div>
 
-    <div class="prayer">
+    <div class = "prayer">
         <h2>Oracion para cerrar la Lectio Divina</h2>
-        <p>(Content for this section will need to be manually added as it is specific and likely changes frequently)</p>
+        <p>[Paste content for Oracion para cerrar la Lectio Divina here]</p>
     </div>
 
-    <div class="prayer">
+     <div class = "prayer">
         <h2>Peticiones y Acciones de Gracias al Señor</h2>
-        <p>(Content for this section will need to be manually added as it is specific and likely changes frequently)</p>
+        <p>[Paste content for Peticiones y Acciones de Gracias al Señor here]</p>
     </div>
 
     <div class="prayer">
