--- a/index.html
+++ b/index.html
@@ -283,16 +283,9 @@
         <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los deterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lagrimas. E a pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muestranos a Jesus, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen Maria. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amen.</p>
     </div>
 
-    <div class = "prayer">
-        <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
-    </div>
-
-    <div class = "prayer">
-        <h2>Oracion para cerrar la Lectio Divina</h2>
-    </div>
-
-     <div class = "prayer">
-        <h2>Peticiones y Acciones de Gracias al Señor</h2>
+    <div class="prayer">
+        <h2>Oracion</h2>
+        <p>Acoge Padre todas estas oraciones que te dirigimos en nuestras necesidades, escucha tambien aquellas que se quedan en nuestros corazon y no nos atrevemos a decir. Escucha tambien nuestros agradecimientos por todo lo que nos ofreces, aun sin pedirlo.</p>
     </div>
 
     <div class="prayer">
@@ -318,6 +311,21 @@
     <div class="prayer">
         <h2>Santa Teresa de Calcuta</h2>
         <p>Ruega por nosotros</p>
+    </div>
+
+    <div class = "prayer">
+        <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
+        <p>[Paste content for Evangelio del Siguiente Domingo y Lectio Divina here]</p>
+    </div>
+
+    <div class = "prayer">
+        <h2>Oracion para cerrar la Lectio Divina</h2>
+        <p>[Paste content for Oracion para cerrar la Lectio Divina here]</p>
+    </div>
+
+     <div class = "prayer">
+        <h2>Peticiones y Acciones de Gracias al Señor</h2>
+        <p>[Paste content for Peticiones y Acciones de Gracias al Señor here]</p>
     </div>
 
     <div class="prayer">
